package com.banking.digital.model;

public class AccountManagement {

    public boolean changePassword(User user, String oldPassword, String newPassword) {
        // Implementation to change password
        return true;
    }

    public void updateDetails(User user) {
        // Implementation to update user details
    }
}
